--- a/src/main/resources/templates/assets/show.html
+++ b/src/main/resources/templates/assets/show.html
@@ -109,11 +109,11 @@
                                     </div>
                                     <div class="form-group col-3 float-lg-left">
                                         <label>影院名称：</label>
-                                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                                        <input type="text" class="form-control"  name="cinemaName">
                                     </div>
                                     <div class="form-group col-3 float-lg-right">
-                                        <label>影院经理：</label>
-                                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                                        <label>影厅数量：</label>
+                                        <input type="text" class="form-control" name="responsible">
                                     </div>
                                 </div>
                                 <div class="form-group">
