--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -120,8 +120,8 @@
                     <div class="col-2 float-lg-left">
                       <label>品牌：</label>
                       <select class="form-control" name="brand">
-                        <option>可视</option>
                         <option>巴可</option>
+                        <option>科视</option>
                         <option>杜比</option>
                         <option>戴尔</option>
                       </select>
@@ -140,12 +140,11 @@
                     <div class="col-2 float-lg-left">
                       <label>型号：</label>
                       <select class="form-control" name="brand">
-                        <option>CLP </option>
-                        <option>SLP </option>
-                        <option>B </option>
-                        <option>C </option>
-                        <option>L </option>
-                        <option>LHC </option>
+                        <option>DP2K-20C</option>
+                        <option>CP4220</option>
+                        <option>CP4325-RGB</option>
+                        <option>DP2K-23B</option>
+                        <option>DP2K-10S</option>
                       </select>
                     </div>
                   </div>
@@ -155,7 +154,9 @@
                   <div class="card-footer">
                     <div class="row float-right">
                       <button type="submit" class="btn btn-primary">筛选</button>
+                      <span> &nbsp; &nbsp;</span>
                       <button type="button" class="btn btn-primary">导入</button>
+                      <span> &nbsp; &nbsp;</span>
                       <a href="/base/equipment/insert" style="color: #ffffff;">
                         <button type="button" class="btn btn-primary">添加</button>
                       </a>
