--- a/src/main/resources/templates/documents/hand_details.html
+++ b/src/main/resources/templates/documents/hand_details.html
@@ -168,9 +168,9 @@
                     </tr>
                     </tbody>
                   </table>
-                      <div class="col-11">
-                          <button style="float: right" type="submit" class="btn btn-info"><a href = "/question/details">答题</a></button>
-                      </div>
+<!--                      <div class="col-11">-->
+<!--                          <button style="float: right" type="submit" class="btn btn-info"><a href = "/question/details">答题</a></button>-->
+<!--                      </div>-->
 				  </div>
                   <div class="col-6 table-responsive">
                 </div>
