--- a/src/main/resources/templates/documents/operate_details.html
+++ b/src/main/resources/templates/documents/operate_details.html
@@ -165,7 +165,7 @@
                     </tbody>
                   </table>
                     <div class="col-11">
-                      <button style="float: right" type="submit" class="btn btn-info"><a href = "/question/details">答题</a></button>
+                      <button style="float: right" type="submit" class="btn btn-info"><a href = "/question/details" style="color: white;">答题</a></button>
                     </div>
 				  </div>
                 <!-- /.col -->
