--- a/src/main/resources/templates/question/details-1.html
+++ b/src/main/resources/templates/question/details-1.html
@@ -138,12 +138,12 @@
                 </div>
                 <div class="col-sm-6">
                   <div class="row">
-                    <div class="col-sm-6">
-                      <h5>相关视频</h5>
-                    </div>
-                    <div class="row">
-                      <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}"/>
-                    </div>
+<!--                    <div class="col-sm-6">-->
+<!--                      <h5>相关视频</h5>-->
+<!--                    </div>-->
+<!--                    <div class="row">-->
+<!--                      <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}"/>-->
+<!--                    </div>-->
                   </div>
                 </div>
               </div>
