--- a/src/main/resources/templates/question/details.html
+++ b/src/main/resources/templates/question/details.html
@@ -321,14 +321,14 @@
           title   :   "4K的像素数是2K像素数的几倍？",
           options :   ["1倍", "2倍", "3倍", "4倍"],
           video   :   "src=\"/video/abc.mov\"",
-          info    :   ["电影技术基础知识", "3", " "]
+          info    :   ["电影技术基础知识", "4", " "]
         },
         "question3" :       {
           id      :   2,
           title   :   "数字电影在播放视频图像是，至少每秒要达到多少帧？",
           options :   ["12帧", "24帧", "48帧", "64帧"],
           video   :   "src=\"/video/abc.mov\"",
-          info    :   ["电影技术基础知识", "3", " "]
+          info    :   ["电影技术基础知识", "2", " "]
         },
         "question4" :       {
           id      :   3,
@@ -363,21 +363,21 @@
           title   :   "DP2K-20C放映机外盖板由几块盖板组成？",
           options :   ["六块", "七块", "八块", "九块"],
           video   :   "src=\"/video/abc.mov\"",
-          info    :   ["放映机外盖板的识别与拆卸方法", "3", "  "]
+          info    :   ["放映机外盖板的识别与拆卸方法", "2", "  "]
         },
         "question9" :       {
           id      :   8,
           title   :   "位于放映机左侧盖板内的引擎仓盖板叫什么？",
           options :   ["灯箱盖板", "输入盖板", "密封盖板", "顶盖板"],
           video   :   "src=\"/video/abc.mov\"",
-          info    :    ["放映机外盖板的识别与拆卸方法", "3", "  "]
+          info    :    ["放映机外盖板的识别与拆卸方法", "4", "  "]
         },
         "question10" :       {
           id      :   9,
           title   :   "拆卸密封盖板并进行安装，都要使用安全认证钥匙进行安全认证，否则会出现的报错代码是什么？",
           options :   ["10945", "10981", "20945", "20981"],
           video   :   "src=\"/video/abc.mov\"",
-          info    :   ["放映机外盖板的识别与拆卸方法", "3", "  "]
+          info    :   ["放映机外盖板的识别与拆卸方法", "5", "  "]
         }
       };
 
@@ -537,7 +537,7 @@
                 "                    </div>\n" +
                 "               <div class=\"row col-12\" style='margin-top: 3rem;'>" +
                 "                <div class=\"col-sm-4\">\n" +
-                "                  <label>题目类型及对象: </label><br/>\n" +
+                "                  <label>相关内容: </label><br/>\n" +
                 "                  <p>" + questionDetails["info"][0] + "</p>\n" +
                 "                </div>\n" +
                 "                <div class=\"col-sm-4\">\n" +
@@ -545,15 +545,15 @@
                 "                  <p>" + questionDetails["info"][1] + "</p>\n" +
                 "                </div>\n" +
                 "                <div class=\"col-sm-4\">\n" +
-                "                  <label>相关资源: </label><br/>\n" +
-                "                  <p>" + questionDetails["info"][2] + "</p>\n" +
+                "                  <label>题目类型: </label><br/>\n" +
+                "                  <p> 设备 </p>\n" +
                 "                </div>\n" +
                 "              </div>\n" +
                 "                </div>\n" +
-                "                <div class=\"col-sm-6\">\n" +
-                "                  <label>相关视频</label><br/>\n" +
-                "                  <video  style=\"height: 340px; width: 617px;\" autoplay=\"autoplay\" controls=\"controls\"" + questionDetails["video"] + "/>\n" +
-                "                </div>\n" +
+                // "                <div class=\"col-sm-6\">\n" +
+                // "                  <label>相关视频</label><br/>\n" +
+                // "                  <video  style=\"height: 340px; width: 617px;\" autoplay=\"autoplay\" controls=\"controls\"" + questionDetails["video"] + "/>\n" +
+                // "                </div>\n" +
                 "              </div>" +
                 "            </div>\n" +
                 "          </div>\n" +
