--- a/src/main/resources/templates/base/cinema/search.html
+++ b/src/main/resources/templates/base/cinema/search.html
@@ -84,201 +84,199 @@
   <section class="content">
     <div class="row">
       <div class="col-12">
-      <div class="card card-primary">
-            <div class="card-header">
-              <h3 class="card-title">影院检索信息</h3>
-            </div>
-            <!-- /.card-header -->
-            <!-- form start -->
-            <form role="form" action="/base/cinema/show">
-              <div class="card-body">
-                <div class="form-group">
-                  <div class="row">
-                    <div class="col-3 float-lg-left">
-                      <div class="form-group">
-                        <label>所在省市：</label>
-                        <select id="province" class="form-control" name="province">
-                        </select>
+          <div class="card card-primary">
+              <div class="card-header">
+                  <h3 class="card-title">影院检索信息</h3>
+              </div>
+              <!-- /.card-header -->
+              <!-- form start -->
+              <form role="form" action="/base/cinema/show">
+                  <div class="card-body">
+                      <div class="row">
+                          <div class="col-3 float-lg-left">
+                              <div class="form-group">
+                                  <label>所在省市：</label>
+                                  <select id="province" class="form-control" name="province">
+                                  </select>
+                              </div>
+                          </div>
+                          <div class="col-3 float-lg-right">
+                              <div class="form-group">
+                                  <label>所在区：</label>
+                                  <select id="city" class="form-control" name="city">
+                                  </select>
+                              </div>
+                          </div>
+                          <div class="form-group col-3 float-lg-left">
+                              <label>影院名称：</label>
+                              <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
+                          </div>
+                          <div class="form-group col-3 float-lg-right">
+                              <label>影厅数量：</label>
+                              <input type="text" class="form-control" placeholder="例：10" name="responsible">
+                          </div>
                       </div>
-                    </div>
-                    <div class="col-3 float-lg-right">
                       <div class="form-group">
-                        <label>所在区：</label>
-                        <select id="city" class="form-control" name="city">
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-3 float-lg-left">
-                      <label>影院名称：</label>
-                      <input type="text" class="form-control" name="cinemaName">
-                    </div>
-                    <div class="form-group col-3 float-lg-right">
-                      <label>影厅数量：</label>
-                      <input type="text" class="form-control" name="responsible">
-                    </div>
-                  </div>
-                </div>
-                  <!-- /.card-body -->
-                  <div class="form-group">
-                      <div class="card-footer">
-                          <div class="row float-right">
-                              <button type="submit" class="btn btn-primary">筛选</button>
-                              <button type="button" class="btn btn-primary">导入</button>
-                              <a href="/base/cinema/insert" style="color: #ffffff;">
-                                  <button type="button" class="btn btn-primary">添加</button>
-                              </a>
+                          <div class="card-footer">
+                              <div class="row float-right">
+                                  <button type="submit" class="btn btn-primary">筛选</button>
+                                  <span> &nbsp; &nbsp;</span>
+                                  <button type="button" class="btn btn-primary">导入</button>
+                                  <span> &nbsp; &nbsp;</span>
+                                  <a href="/base/cinema/insert" style="color: #ffffff;">
+                                      <button type="button" class="btn btn-primary">添加</button>
+                                  </a>
+                              </div>
                           </div>
                       </div>
                   </div>
-                </div>
-            </form>
-      </div>
-        <div class="card card-primary">
-          <div class="card-header">
-            <h3 class="card-title">影院基础信息列表</h3>
+              </form>
           </div>
-          <!-- /.card-header -->
-          <div class="card-body">
-            <table class="table table-bordered table-striped">
-              <thead>
-              <tr>
-                <th>序号</th>
-                <th>影院编码</th>
-                <th>影院名称</th>
-                <th>省市区</th>
-                <th>地址</th>
-                <th>影厅数量</th>
-                <th>影院经理</th>
-                <th>联系电话</th>
-                <th>技术主管</th>
-                <th>联系电话</th>
-                <th>操作</th>
-              </tr>
-              </thead>
+          <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">影院基础信息列表</h3>
+              </div>
+              <!-- /.card-header -->
+              <div class="card-body">
+                <table class="table table-bordered table-striped">
+                  <thead>
+                  <tr>
+                    <th>序号</th>
+                    <th>影院编码</th>
+                    <th>影院名称</th>
+                    <th>省市区</th>
+                    <th>地址</th>
+                    <th>影厅数量</th>
+                    <th>影院经理</th>
+                    <th>联系电话</th>
+                    <th>技术主管</th>
+                    <th>联系电话</th>
+                    <th>操作</th>
+                  </tr>
+                  </thead>
 
-              <tbody>
+                  <tbody>
 
-              <tr>
-                <td>1</td>
-                <td>2612384213134</td>
-                <td>中影国际影城(欢乐海岸店)</td>
-                <td>广东省深圳市南山区</td>
-                <td>深圳市南山区白石路东8号欢乐海岸曲水湾2栋A区</td>
-                <td>12</td>
-                <td>张先生</td>
-                <td>13332193517</td>
-                <td>刘先生</td>
-                <td>13823913241</td>
-                <td>
-                  <div class="float-lg-left">
-<!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
-                      <button type="button" class="btn btn-sm" style="color: green">修改</button>
-<!--                    </a>-->
-                    <a href="/base/cinema/delete" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                    </a>
-                  </div>
-                </td>
-              </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>2612384213134</td>
+                    <td>中影国际影城(欢乐海岸店)</td>
+                    <td>广东省深圳市南山区</td>
+                    <td>深圳市南山区白石路东8号欢乐海岸曲水湾2栋A区</td>
+                    <td>12</td>
+                    <td>张先生</td>
+                    <td>13332193517</td>
+                    <td>刘先生</td>
+                    <td>13823913241</td>
+                    <td>
+                      <div class="float-lg-left">
+    <!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
+                          <button type="button" class="btn btn-sm" style="color: green">修改</button>
+    <!--                    </a>-->
+                        <a href="/base/cinema/delete" style="color: #ffffff;">
+                          <button type="button" class="btn btn-sm" style="color: red">删除</button>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
 
-              <tr>
-                <td>2</td>
-                <td>2612384213251</td>
-                <td>万达影城(五角场店)</td>
-                <td>上海市</td>
-                <td>上海市杨浦区国宾路58号万达广场3层</td>
-                <td>12</td>
-                <td>孙女士</td>
-                <td>13332193518</td>
-                <td>李先生</td>
-                <td>13823913242</td>
-                <td>
-                  <div class="float-lg-left">
-<!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
-                      <button type="button" class="btn btn-sm" style="color: green">修改</button>
-<!--                    </a>-->
-                    <a href="/base/cinema/delete" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                    </a>
-                  </div>
-                </td>
-              </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>2612384213251</td>
+                    <td>万达影城(五角场店)</td>
+                    <td>上海市</td>
+                    <td>上海市杨浦区国宾路58号万达广场3层</td>
+                    <td>12</td>
+                    <td>孙女士</td>
+                    <td>13332193518</td>
+                    <td>李先生</td>
+                    <td>13823913242</td>
+                    <td>
+                      <div class="float-lg-left">
+    <!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
+                          <button type="button" class="btn btn-sm" style="color: green">修改</button>
+    <!--                    </a>-->
+                        <a href="/base/cinema/delete" style="color: #ffffff;">
+                          <button type="button" class="btn btn-sm" style="color: red">删除</button>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
 
-              <tr>
-                <td>3</td>
-                <td>2612384294832</td>
-                <td>UME华星影城</td>
-                <td>北京市</td>
-                <td>北京市海淀区科学院南路44号</td>
-                <td>7</td>
-                <td>刘女士</td>
-                <td>13332193519</td>
-                <td>孔先生</td>
-                <td>13823913243</td>
-                <td>
-                  <div class="float-lg-left">
-<!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
-                      <button type="button" class="btn btn-sm" style="color: green">修改</button>
-<!--                    </a>-->
-                    <a href="/base/cinema/delete" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                    </a>
-                  </div>
-                </td>
-              </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>2612384294832</td>
+                    <td>UME华星影城</td>
+                    <td>北京市</td>
+                    <td>北京市海淀区科学院南路44号</td>
+                    <td>7</td>
+                    <td>刘女士</td>
+                    <td>13332193519</td>
+                    <td>孔先生</td>
+                    <td>13823913243</td>
+                    <td>
+                      <div class="float-lg-left">
+    <!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
+                          <button type="button" class="btn btn-sm" style="color: green">修改</button>
+    <!--                    </a>-->
+                        <a href="/base/cinema/delete" style="color: #ffffff;">
+                          <button type="button" class="btn btn-sm" style="color: red">删除</button>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
 
-              <tr>
-                <td>4</td>
-                <td>3612384215312</td>
-                <td>首都电影院(西单大悦城店)</td>
-                <td>北京市</td>
-                <td>北京市西城区西单北大街131号西单大悦城F10</td>
-                <td>13</td>
-                <td>李先生</td>
-                <td>13332193520</td>
-                <td>刘女士</td>
-                <td>13823913244</td>
-                <td>
-                  <div class="float-lg-left">
-<!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
-                      <button type="button" class="btn btn-sm" style="color: green">修改</button>
-<!--                    </a>-->
-                    <a href="/base/cinema/delete" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                    </a>
-                  </div>
-                </td>
-              </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>3612384215312</td>
+                    <td>首都电影院(西单大悦城店)</td>
+                    <td>北京市</td>
+                    <td>北京市西城区西单北大街131号西单大悦城F10</td>
+                    <td>13</td>
+                    <td>李先生</td>
+                    <td>13332193520</td>
+                    <td>刘女士</td>
+                    <td>13823913244</td>
+                    <td>
+                      <div class="float-lg-left">
+    <!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
+                          <button type="button" class="btn btn-sm" style="color: green">修改</button>
+    <!--                    </a>-->
+                        <a href="/base/cinema/delete" style="color: #ffffff;">
+                          <button type="button" class="btn btn-sm" style="color: red">删除</button>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
 
-              <tr>
-                <td>5</td>
-                <td>3612389215773</td>
-                <td>大光明影院</td>
-                <td>天津市和平区</td>
-                <td>天津市和平区曲阜道1号</td>
-                <td>7</td>
-                <td>王先生</td>
-                <td>13332193521</td>
-                <td>王先生</td>
-                <td>13823913245</td>
-                <td>
-                  <div class="float-lg-left">
-<!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
-                      <button type="button" class="btn btn-sm" style="color: green">修改</button>
-<!--                    </a>-->
-                    <a href="/base/cinema/delete" style="color: #ffffff;">
-                      <button type="button" class="btn btn-sm" style="color: red">删除</button>
-                    </a>
-                  </div>
-                </td>
-              </tr>
+                  <tr>
+                    <td>5</td>
+                    <td>3612389215773</td>
+                    <td>大光明影院</td>
+                    <td>天津市和平区</td>
+                    <td>天津市和平区曲阜道1号</td>
+                    <td>7</td>
+                    <td>王先生</td>
+                    <td>13332193521</td>
+                    <td>王先生</td>
+                    <td>13823913245</td>
+                    <td>
+                      <div class="float-lg-left">
+    <!--                    <a th:href="@{/base/cinema/update(id=${cinema.id})}" style="color: #ffffff;">-->
+                          <button type="button" class="btn btn-sm" style="color: green">修改</button>
+    <!--                    </a>-->
+                        <a href="/base/cinema/delete" style="color: #ffffff;">
+                          <button type="button" class="btn btn-sm" style="color: red">删除</button>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
 
-              </tbody>
-            </table>
-          </div>
-          <!-- /.card-body -->
-        </div>
-        <!-- /.card -->
+                  </tbody>
+                </table>
+              </div>
+              <!-- /.card-body -->
+            </div>
       </div>
       <!-- /.col -->
     </div>
