--- a/src/main/resources/templates/base/cinema/show.html
+++ b/src/main/resources/templates/base/cinema/show.html
@@ -86,7 +86,7 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入影院检索信息</h3>
+                            <h3 class="card-title">影院检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
@@ -112,16 +112,17 @@
                                         <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
                                     </div>
                                     <div class="form-group col-3 float-lg-right">
-                                        <label>影院经理：</label>
-                                        <input type="text" class="form-control" placeholder="例：张XX" name="responsible">
+                                        <label>影厅数量：</label>
+                                        <input type="text" class="form-control" placeholder="例：10" name="responsible">
                                     </div>
                                 </div>
-
                                 <div class="form-group">
                                     <div class="card-footer">
                                         <div class="row float-right">
                                             <button type="submit" class="btn btn-primary">筛选</button>
+                                            <span> &nbsp; &nbsp;</span>
                                             <button type="button" class="btn btn-primary">导入</button>
+                                            <span> &nbsp; &nbsp;</span>
                                             <a href="/base/cinema/insert" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-primary">添加</button>
                                             </a>
@@ -137,7 +138,7 @@
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <table id="example1" class="table table-bordered table-striped">
+                            <table class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
                                     <th>影院ID</th>
