--- a/src/main/resources/templates/base/parts/search.html
+++ b/src/main/resources/templates/base/parts/search.html
@@ -85,60 +85,59 @@
     <div class="row">
       <div class="col-12">
       <div class="card card-primary">
-            <div class="card-header">
-              <h3 class="card-title">配件检索信息</h3>
-            </div>
-            <!-- /.card-header -->
-            <!-- form start -->
-            <form role="form" action="/base/parts/show">
-              <div class="card-body">
-                <div class="form-group">
-                  <div class="row">
-                    <div class="col-3 float-lg-left">
-                      <div class="form-group">
-                        <label>适配设备类型：</label>
-                        <select class="form-control" name="type">
-                          <option>放映机</option>
-                          <option>音响</option>
-                          <option>服务器</option>
-                          <option>音频处理器</option>
-                          <option>功放设备</option>
-                          <option>3D系统</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-3 float-lg-right">
-                      <div class="form-group">
-                        <label>品牌：</label>
-                        <select class="form-control" name="brand">
-                          <option>科视</option>
-                          <option>巴可</option>
-                          <option>杜比</option>
-                          <option>戴尔</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-3 float-lg-left">
-                      <label>型号：</label>
-                      <input type="text" class="form-control" placeholder="例：R9855937">
-                    </div>
-                  </div>
-                </div>
-                  <!-- /.card-body -->
-                <div class="form-group">
-                  <div class="card-footer">
-                    <div class="row float-right">
-                      <button type="submit" class="btn btn-primary">筛选</button>
-                      <button type="button" class="btn btn-primary">导入</button>
-                      <a href="/base/parts/insert" style="color: #ffffff;">
-                        <button type="button" class="btn btn-primary">添加</button>
-                      </a>
-                    </div>
-                  </div>
-                </div>
+          <div class="card-header">
+            <h3 class="card-title">配件检索信息</h3>
+          </div>
+          <!-- /.card-header -->
+          <!-- form start -->
+          <form role="form" action="/base/parts/show">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-4 float-lg-left">
+              <div class="form-group">
+                <label>适配设备类型：</label>
+                <select class="form-control" name="type">
+                  <option>放映机</option>
+                  <option>音响</option>
+                  <option>服务器</option>
+                  <option>音频处理器</option>
+                  <option>功放设备</option>
+                  <option>3D系统</option>
+                </select>
               </div>
-            </form>
+            </div>
+            <div class="col-4 float-lg-right">
+              <div class="form-group">
+                <label>品牌：</label>
+                <select class="form-control" name="brand">
+                  <option>科视</option>
+                  <option>巴可</option>
+                  <option>杜比</option>
+                  <option>戴尔</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group col-4 float-lg-left">
+              <label>型号：</label>
+              <input type="text" class="form-control" placeholder="例：R9855937">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="card-footer">
+              <div class="row float-right">
+                <button type="submit" class="btn btn-primary">筛选</button>
+                <span> &nbsp; &nbsp;</span>
+                <button type="button" class="btn btn-primary">导入</button>
+                <span> &nbsp; &nbsp;</span>
+                <a href="/base/parts/insert" style="color: #ffffff;">
+                  <button type="button" class="btn btn-primary">添加</button>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
+      </form>
+      </div>
         <div class="card card-primary">
           <div class="card-header">
             <h3 class="card-title">基础信息检索结果</h3>
