--- a/src/main/resources/templates/base/parts/show.html
+++ b/src/main/resources/templates/base/parts/show.html
@@ -89,16 +89,16 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">请输入配件检索信息</h3>
+                            <h3 class="card-title">配件检索信息</h3>
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
                         <form role="form">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-3 float-lg-left">
+                                    <div class="col-4 float-lg-left">
                                         <div class="form-group">
-                                            <label>配件所在类型：</label>
+                                            <label>适配设备类型：</label>
                                             <select class="form-control" name="type">
                                                 <option>放映机</option>
                                                 <option>音响</option>
@@ -106,42 +106,32 @@
                                                 <option>音频处理器</option>
                                                 <option>功放设备</option>
                                                 <option>3D系统</option>
-                                                <option>D系统</option>
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-3 float-lg-right">
+                                    <div class="col-4 float-lg-right">
                                         <div class="form-group">
-                                            <label>配件品牌：</label>
+                                            <label>品牌：</label>
                                             <select class="form-control" name="brand">
-                                                <option>可视</option>
-                                                <option>巴克</option>
+                                                <option>科视</option>
+                                                <option>巴可</option>
                                                 <option>杜比</option>
                                                 <option>戴尔</option>
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="form-group col-3 float-lg-left">
-                                        <label>配件型号：</label>
-                                        <select class="form-control" name="brand">
-                                            <option>CLP 系列</option>
-                                            <option>SLP 系列</option>
-                                            <option>B 系列</option>
-                                            <option>C 系列</option>
-                                            <option>L 系列</option>
-                                            <option>LHC 系列</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group col-3 float-lg-right">
-                                        <label>配件序列号：</label>
-                                        <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
+                                    <div class="form-group col-4 float-lg-left">
+                                        <label>型号：</label>
+                                        <input type="text" class="form-control" placeholder="例：R9855937">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="card-footer">
                                         <div class="row float-right">
                                             <button type="submit" class="btn btn-primary">筛选</button>
+                                            <span> &nbsp; &nbsp;</span>
                                             <button type="button" class="btn btn-primary">导入</button>
+                                            <span> &nbsp; &nbsp;</span>
                                             <a href="/base/parts/insert" style="color: #ffffff;">
                                                 <button type="button" class="btn btn-primary">添加</button>
                                             </a>
@@ -157,7 +147,7 @@
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <table id="example1" class="table table-bordered table-striped">
+                            <table class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
                                     <th>配件ID</th>
