--- a/src/main/resources/templates/task/task_search.html
+++ b/src/main/resources/templates/task/task_search.html
@@ -98,7 +98,7 @@
                   <div class="row">
                     <div class="form-group col-2">
                       <label>日期：</label>
-                      <input type="text" class="form-control" name="date"></input>
+                      <input type="text" class="form-control"  placeholder="2019-11-20" name="date"></input>
                     </div>
                     <div class="form-group col-2">
                       <label>责任人：</label>
