add default page search

--- a/src/main/resources/templates/base/equipment/show.html
+++ b/src/main/resources/templates/base/equipment/show.html
@@ -99,7 +99,7 @@
                                     <div class="row">
                                         <div class="col-2 float-lg-left">
                                             <div class="form-group">
-                                                <label>种类：</label>
+                                                <label>设备类型：</label>
                                                 <select class="form-control" name="type">
                                                     <option>放映机</option>
                                                     <option>音响</option>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">基础信息检索结果</h3>
+                            <h3 class="card-title">设备检索结果</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
