--- a/src/main/resources/templates/base/cinema/show.html
+++ b/src/main/resources/templates/base/cinema/show.html
@@ -93,28 +93,33 @@
                         <form role="form">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-3 float-lg-left">
+                                    <div class="col-2 float-lg-left">
                                         <div class="form-group">
                                             <label>所在省市：</label>
                                             <select id="province" class="form-control" name="province">
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-3 float-lg-right">
+                                    <div class="col-2 float-lg-right">
                                         <div class="form-group">
                                             <label>所在区：</label>
                                             <select id="city" class="form-control" name="city">
                                             </select>
                                         </div>
                                     </div>
+                                    <div class="form-group col-3 float-lg-right">
+                                        <label>影厅编码：</label>
+                                        <input type="text" class="form-control" placeholder="例: 2612384213134" name="responsible">
+                                    </div>
                                     <div class="form-group col-3 float-lg-left">
                                         <label>影院名称：</label>
                                         <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城" name="cinemaName">
                                     </div>
-                                    <div class="form-group col-3 float-lg-right">
+                                    <div class="form-group col-2 float-lg-right">
                                         <label>影厅数量：</label>
                                         <input type="text" class="form-control" placeholder="例：10" name="responsible">
                                     </div>
+
                                 </div>
                                 <div class="form-group">
                                     <div class="card-footer">
@@ -134,7 +139,7 @@
                     </div>
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">基础信息检索结果</h3>
+                            <h3 class="card-title">影院检索结果</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
