--- a/src/main/resources/templates/base/parts/show.html
+++ b/src/main/resources/templates/base/parts/show.html
@@ -96,9 +96,9 @@
                         <form role="form">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-4 float-lg-left">
+                                    <div class="col-2 float-lg-left">
                                         <div class="form-group">
-                                            <label>适配设备类型：</label>
+                                            <label>配件类型：</label>
                                             <select class="form-control" name="type">
                                                 <option>放映机</option>
                                                 <option>音响</option>
@@ -109,9 +109,9 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-4 float-lg-right">
+                                    <div class="col-2 float-lg-right">
                                         <div class="form-group">
-                                            <label>品牌：</label>
+                                            <label>适配品牌：</label>
                                             <select class="form-control" name="brand">
                                                 <option>科视</option>
                                                 <option>巴可</option>
@@ -120,9 +120,28 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="form-group col-4 float-lg-left">
-                                        <label>型号：</label>
+                                    <div class="form-group col-2 float-lg-left">
+                                        <div class="form-group">
+                                            <label>适配型号：</label>
+                                            <select class="form-control" name="model">
+                                                <option>DP2K-20C</option>
+                                                <option>CP4325-RGB</option>
+                                                <option>CP4220	</option>
+                                                <option>CP2230</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group col-2 float-lg-left">
+                                        <label>配件名称：</label>
+                                        <input type="text" class="form-control" placeholder="例：镜头">
+                                    </div>
+                                    <div class="form-group col-2 float-lg-left">
+                                        <label>配件号：</label>
                                         <input type="text" class="form-control" placeholder="例：R9855937">
+                                    </div>
+                                    <div class="form-group col-2 float-lg-left">
+                                        <label>供应商：</label>
+                                        <input type="text" class="form-control" placeholder="例：巴可">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -143,33 +162,33 @@
                     </div>
                     <div class="card card-primary">
                         <div class="card-header">
-                            <h3 class="card-title">基础信息检索结果</h3>
+                            <h3 class="card-title">配件检索结果</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                 <tr>
-                                    <th>配件ID</th>
-                                    <th>配件所在设备类型</th>
-                                    <th>配件品牌</th>
-                                    <th>配件型号</th>
-                                    <th>配件序列号</th>
-                                    <th>预留字段</th>
-                                    <th>预留字段</th>
+                                    <th>序号</th>
+                                    <th>配件类型</th>
+                                    <th>配件名称</th>
+                                    <th>配件号</th>
+                                    <th>适配型号</th>
+                                    <th>供应商</th>
+                                    <th>质保时间</th>
                                     <th>详情</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr th:each="cinema : ${cinemas}">
-                                    <td th:text="${cinema.cinemaName}">北京XXX影城</td>
-                                    <td th:text="${cinema.province + cinema.city}">北京市 朝阳区</td>
-                                    <td th:text="${cinema.address}">平乐园100号</td>
-                                    <td th:text="${cinema.responsible}">张三</td>
-                                    <td th:text="${cinema.responsiblePhone}">140000</td>
-                                    <td th:text="${cinema.manager}">ac</td>
-                                    <td th:text="${cinema.managerPhone}">dfjlsd</td>
-                                    <th><a href="/details">详情</a></th>
+                                    <td th:text="${cinema.cinemaName}"></td>
+                                    <td th:text="${cinema.province + cinema.city}"></td>
+                                    <td th:text="${cinema.address}"></td>
+                                    <td th:text="${cinema.responsible}"></td>
+                                    <td th:text="${cinema.responsiblePhone}"></td>
+                                    <td th:text="${cinema.manager}"></td>
+                                    <td th:text="${cinema.managerPhone}"></td>
+                                    <th><a href="/details">详情>></a></th>
                                 </tr>
                                 </tbody>
                             </table>
